Старалась сделать максимально резиновый макет. Сначала сделала вариант на table_layout, т.к. расположение кнопок калькулятора логично укладывается в таблицу, но потом почитала про constraint_layout и сделала на нем. Он максимально гибок и не хуже table_layout может передать структуру таблицы. Вариант на table_layout тоже оставила (нужно подключить activity_main.xml).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Calculator</string>
+    <string name="buttonText1">1</string>
+    <string name="buttonText2">2</string>
+    <string name="buttonText3">3</string>
+    <string name="buttonText4">4</string>
+    <string name="buttonText5">5</string>
+    <string name="buttonText6">6</string>
+    <string name="buttonText7">7</string>
+    <string name="buttonText8">8</string>
+    <string name="buttonText9">9</string>
+    <string name="buttonText0">0</string>
+    <string name="buttonTextPt">.</string>
+    <string name="buttonTextPlus">+</string>
+    <string name="buttonTextMinus">\u2212</string>
+    <string name="buttonTextMultiply">\u00D7</string>
+    <string name="buttonTextDivide">\u00F7</string>
+    <string name="buttonTextEqual">=</string>
+    <string name="buttonTextDel">C</string>
+
 </resources>
