--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="infinite">Ошибка переполнения</string>
     <string name="wrongInput">Неправильный ввод</string>
     <string name="day_night_switch">день/ночь</string>
+    <string name="settings_button_text">Настройки</string>
+    <string name="save_settings_button_text">Сохранить</string>
 
 </resources>
