--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">TestApplication</string>
+    <string name="buttonText">Рассчитать</string>
+    <string name="hintText">Введите выражение</string>
 </resources>
